--- a/data-feature-selection/Feature-Selection.ipynb
+++ b/data-feature-selection/Feature-Selection.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "challengify"
@@ -311,7 +311,7 @@
        "85     SalePrice           Fin     0.419678"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "challengify"
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
       "\n",
       "test_correlation.py::TestCorrelation::test_correlated_features \u001b[32mPASSED\u001b[0m\u001b[32m    [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.05s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.04s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "challengify"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "challengify"
@@ -459,7 +459,7 @@
        "0.6419144066998052"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
    "source": [
     "# YOUR CODE HERE\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import cross_validate, cross_val_score\n",
     "\n",
     "model = LinearRegression()\n",
     "\n",
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
       "\n",
       "test_base_model.py::TestBase_model::test_base_model_score \u001b[32mPASSED\u001b[0m\u001b[32m         [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.19s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.14s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "challengify"
@@ -581,62 +581,62 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>GrLivArea</td>\n",
-       "      <td>1.012484</td>\n",
+       "      <td>1.016667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>BedroomAbvGr</td>\n",
-       "      <td>0.064966</td>\n",
+       "      <td>0.065637</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Fin</td>\n",
-       "      <td>0.052199</td>\n",
+       "      <td>0.052784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Unf</td>\n",
-       "      <td>0.020924</td>\n",
+       "      <td>0.020618</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>KitchenAbvGr</td>\n",
-       "      <td>0.019826</td>\n",
+       "      <td>0.019249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>CentralAir</td>\n",
-       "      <td>0.015726</td>\n",
+       "      <td>0.01514</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>NoGarage</td>\n",
-       "      <td>0.01187</td>\n",
+       "      <td>0.011925</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>RFn</td>\n",
-       "      <td>0.011793</td>\n",
+       "      <td>0.011436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>sin_MoSold</td>\n",
-       "      <td>0.001067</td>\n",
+       "      <td>0.000906</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>OverallCond</td>\n",
-       "      <td>0.000236</td>\n",
+       "      <td>0.000243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>RoofSurface</td>\n",
-       "      <td>0.000118</td>\n",
+       "      <td>0.000176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>cos_MoSold</td>\n",
-       "      <td>0.000038</td>\n",
+       "      <td>0.000065</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -644,21 +644,21 @@
       ],
       "text/plain": [
        "         feature feature importance\n",
-       "0      GrLivArea           1.012484\n",
-       "1   BedroomAbvGr           0.064966\n",
-       "6            Fin           0.052199\n",
-       "9            Unf           0.020924\n",
-       "2   KitchenAbvGr           0.019826\n",
-       "5     CentralAir           0.015726\n",
-       "7       NoGarage            0.01187\n",
-       "8            RFn           0.011793\n",
-       "10    sin_MoSold           0.001067\n",
-       "3    OverallCond           0.000236\n",
-       "4    RoofSurface           0.000118\n",
-       "11    cos_MoSold           0.000038"
+       "0      GrLivArea           1.016667\n",
+       "1   BedroomAbvGr           0.065637\n",
+       "6            Fin           0.052784\n",
+       "9            Unf           0.020618\n",
+       "2   KitchenAbvGr           0.019249\n",
+       "5     CentralAir            0.01514\n",
+       "7       NoGarage           0.011925\n",
+       "8            RFn           0.011436\n",
+       "10    sin_MoSold           0.000906\n",
+       "3    OverallCond           0.000243\n",
+       "4    RoofSurface           0.000176\n",
+       "11    cos_MoSold           0.000065"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "challengify"
@@ -703,7 +703,7 @@
        "'GrLivArea'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "challengify"
@@ -799,25 +799,25 @@
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'mean'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [34], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m model \u001b[38;5;241m=\u001b[39m LinearRegression()\n\u001b[1;32m      5\u001b[0m cv \u001b[38;5;241m=\u001b[39m cross_validate(model,X, y, cv\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m )\n\u001b[0;32m----> 7\u001b[0m simplified_model_score \u001b[38;5;241m=\u001b[39m \u001b[43mcv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m()\n\u001b[1;32m      9\u001b[0m simplified_model_score\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'mean'"
-     ]
+     "data": {
+      "text/plain": [
+       "0.6376353182930796"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# YOUR CODE HERE\n",
-    "X = data.drop(columns = ['cos_MoSold', 'RoofSurface', 'OverallCond', 'sin_MoSold', 'RFn','NoGarage'])\n",
+    "X = X.drop(columns=['RoofSurface','OverallCond','sin_MoSold','cos_MoSold','RFn','NoGarage']) # Drops weak features\n",
+    "\n",
     "model = LinearRegression()\n",
     "\n",
-    "cv = cross_val(model,X, y, cv=10 )\n",
+    "scores = cross_val_score(model, X, y, cv=10)\n",
     "\n",
-    "simplified_model_score = cv.mean()\n",
+    "simplified_model_score = scores.mean()\n",
     "\n",
     "simplified_model_score"
    ]
@@ -831,9 +831,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.12, pytest-7.1.3, pluggy-1.0.0 -- /Users/bita/.pyenv/versions/lewagon_current/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/bita/code/lewagon/data-feature-selection/tests\n",
+      "plugins: asyncio-0.19.0, anyio-3.6.2\n",
+      "asyncio: mode=strict\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 1 item\n",
+      "\n",
+      "test_reduced_complexity_model.py::TestReduced_complexity_model::test_reduced_complexity_score \u001b[32mPASSED\u001b[0m\u001b[32m [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.14s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\n",
+      "\n",
+      "💯 You can commit your code:\n",
+      "\n",
+      "\u001b[1;32mgit\u001b[39m add tests/reduced_complexity_model.pickle\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed reduced_complexity_model step'\u001b[39m\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m push origin master\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from nbresult import ChallengeResult\n",
     "\n",
