Prepare the dataset, encode, scale, feature engeeniering

--- a/data-car-prices/car-prices/Car-Prices.ipynb
+++ b/data-car-prices/car-prices/Car-Prices.ipynb
@@ -2881,15 +2881,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9310344827586207"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "model_1 = LogisticRegression()\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=1)\n",
+    "\n",
+    "model_1.fit(X_train, y_train)\n",
+    "\n",
+    "model_1.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7931034482758621"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_9 = LogisticRegression()\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=9)\n",
+    "\n",
+    "model_9.fit(X_train, y_train)\n",
+    "\n",
+    "model_9.score(X_test, y_test)"
    ]
   },
   {
@@ -2937,15 +2981,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "##### Random state set = 1\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n",
+      "--------------------------------------------------\n",
+      "##### Random state set = 2\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n",
+      "--------------------------------------------------\n",
+      "##### Random state set = 3\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n",
+      "--------------------------------------------------\n",
+      "##### Random state set = 4\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n",
+      "--------------------------------------------------\n",
+      "##### Random state set = 5\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n",
+      "--------------------------------------------------\n",
+      "##### Random state set = 6\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n",
+      "--------------------------------------------------\n",
+      "##### Random state set = 7\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n",
+      "--------------------------------------------------\n",
+      "##### Random state set = 8\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n",
+      "--------------------------------------------------\n",
+      "##### Random state set = 9\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n",
+      "--------------------------------------------------\n",
+      "##### Random state set = 10\n",
+      "Training data share of class 1 cars: 0.511\n",
+      "Testing data share of class 1 cars: 0.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "for i in range(1, 11):\n",
+    "    print(\"-\"*50)\n",
+    "    print(\"##### Random state set =\", i)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=i, stratify=y)\n",
+    "    print('Training data share of class 1 cars:', round(y_train.mean(), 3))\n",
+    "    print('Testing data share of class 1 cars:', round(y_test.mean(), 3))"
    ]
   },
   {
@@ -3004,9 +3101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8585695006747638"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
