--- a/data-learning-curves/Learning_Curves.ipynb
+++ b/data-learning-curves/Learning_Curves.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "challengify"
@@ -31,7 +31,114 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season</th>\n",
+       "      <th>poss</th>\n",
+       "      <th>mp</th>\n",
+       "      <th>do_ratio</th>\n",
+       "      <th>pacing</th>\n",
+       "      <th>win_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>4847</td>\n",
+       "      <td>2409</td>\n",
+       "      <td>-1.546275</td>\n",
+       "      <td>-0.599918</td>\n",
+       "      <td>1.643091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>5582</td>\n",
+       "      <td>2708</td>\n",
+       "      <td>0.996587</td>\n",
+       "      <td>0.531888</td>\n",
+       "      <td>10.808427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>2407</td>\n",
+       "      <td>0.242598</td>\n",
+       "      <td>0.127976</td>\n",
+       "      <td>3.054773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>1178</td>\n",
+       "      <td>585</td>\n",
+       "      <td>-1.343806</td>\n",
+       "      <td>-1.201034</td>\n",
+       "      <td>0.230004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>4534</td>\n",
+       "      <td>2056</td>\n",
+       "      <td>-1.813990</td>\n",
+       "      <td>-0.128997</td>\n",
+       "      <td>0.905614</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   season  poss    mp  do_ratio    pacing  win_rating\n",
+       "0    1987  4847  2409 -1.546275 -0.599918    1.643091\n",
+       "1    2017  5582  2708  0.996587  0.531888   10.808427\n",
+       "2    2016  4976  2407  0.242598  0.127976    3.054773\n",
+       "3    2021  1178   585 -1.343806 -1.201034    0.230004\n",
+       "4    1988  4534  2056 -1.813990 -0.128997    0.905614"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/bita/code/bita/bootcamp/data-challenges/05-ML/01-Fundamentals-of-Machine-Learning/02-Learning-Curves/NBA.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -57,15 +164,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.556730180006891"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score, cross_validate\n",
+    "\n",
+    "X = df[['mp']]\n",
+    "y = df['win_rating']\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "cv = cross_val_score(model, X, y, cv=5)\n",
+    "\n",
+    "cv_score = cv.mean()\n",
+    "cv_score"
    ]
   },
   {
@@ -77,9 +207,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.12, pytest-7.1.3, pluggy-1.0.0 -- /Users/bita/.pyenv/versions/lewagon_current/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/bita/code/lewagon/data-learning-curves/tests\n",
+      "plugins: asyncio-0.19.0, anyio-3.6.2\n",
+      "asyncio: mode=strict\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 1 item\n",
+      "\n",
+      "test_cv_score.py::TestCvScore::test_cv_score \u001b[32mPASSED\u001b[0m\u001b[32m                      [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.25s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\n",
+      "\n",
+      "💯 You can commit your code:\n",
+      "\n",
+      "\u001b[1;32mgit\u001b[39m add tests/cv_score.pickle\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed cv_score step'\u001b[39m\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m push origin master\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from nbresult import ChallengeResult\n",
     "\n",
@@ -99,7 +258,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -753,9 +911,34 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
