--- a/data-logistic-regression/Logistic_Regression.ipynb
+++ b/data-logistic-regression/Logistic_Regression.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
       "\n",
       "test_accuracy.py::TestAccuracy::test_accuracy \u001b[32mPASSED\u001b[0m\u001b[32m                     [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.15s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.17s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "challengify"
@@ -343,10 +343,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1221893d0>"
+       "<matplotlib.legend.Legend at 0x128be87f0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "challengify"
