--- a/data-preprocessing-workflow/Preprocessing-Workflow.ipynb
+++ b/data-preprocessing-workflow/Preprocessing-Workflow.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "4          RFn          Y       bricks      12     250000  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "(1760, 10)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "challengify"
@@ -246,7 +246,7 @@
        "300"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "challengify"
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
       "test_duplicates.py::TestDuplicates::test_dataset_length \u001b[32mPASSED\u001b[0m\u001b[32m           [ 50%]\u001b[0m\n",
       "test_duplicates.py::TestDuplicates::test_duplicate_count \u001b[32mPASSED\u001b[0m\u001b[32m          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.48s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.75s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "challengify"
@@ -359,8 +359,8 @@
     {
      "data": {
       "text/plain": [
-       "GarageFinish    0.06\n",
-       "RoofSurface     0.01\n",
+       "GarageFinish    5.55\n",
+       "RoofSurface     0.62\n",
        "GrLivArea       0.00\n",
        "BedroomAbvGr    0.00\n",
        "KitchenAbvGr    0.00\n",
@@ -372,14 +372,14 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# YOUR CODE HERE\n",
-    "round(data.isnull().sum().sort_values(ascending=False)/len(data),2)"
+    "round(data.isnull().sum().sort_values(ascending=False)/len(data)*100,2)"
    ]
   },
   {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "challengify"
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "challengify"
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "challengify"
@@ -541,7 +541,7 @@
        "Name: ChimneyStyle, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "0.9965753424657534"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
       "test_missing_values.py::TestMissing_values::test_nans \u001b[32mPASSED\u001b[0m\u001b[32m             [ 50%]\u001b[0m\n",
       "test_missing_values.py::TestMissing_values::test_number_of_columns \u001b[32mPASSED\u001b[0m\u001b[32m [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.76s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.65s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "tags": [
      "challengify"
@@ -675,7 +675,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "tags": [
      "challengify"
@@ -720,7 +720,7 @@
        "0.5776433985192075"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
        "4          RFn          Y      12     250000  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {
     "tags": [
      "challengify"
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
        "4          RFn          Y      12     250000  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
        "max      12.000000  755000.000000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,22 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "minmaxscaler_2 = MinMaxScaler()\n",
-    "\n",
-    "data['BedroomAbvGr'], data['OverallCond'], data['KitchenAbvGr'] =  minmaxscaler_2.fit_transform(data[['BedroomAbvGr','OverallCond','KitchenAbvGr']]).T\n",
-    "\n",
-    "data.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1442,140 @@
        "4          RFn          Y      12     250000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "minmaxscaler_2 = MinMaxScaler()\n",
+    "\n",
+    "data['BedroomAbvGr'], data['OverallCond'], data['KitchenAbvGr'] =  minmaxscaler_2.fit_transform(data[['BedroomAbvGr','OverallCond','KitchenAbvGr']]).T\n",
+    "\n",
+    "data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GrLivArea</th>\n",
+       "      <th>BedroomAbvGr</th>\n",
+       "      <th>KitchenAbvGr</th>\n",
+       "      <th>OverallCond</th>\n",
+       "      <th>RoofSurface</th>\n",
+       "      <th>GarageFinish</th>\n",
+       "      <th>CentralAir</th>\n",
+       "      <th>MoSold</th>\n",
+       "      <th>SalePrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.380070</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.316729</td>\n",
+       "      <td>RFn</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2</td>\n",
+       "      <td>208500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.312090</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>0.069650</td>\n",
+       "      <td>RFn</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>5</td>\n",
+       "      <td>181500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.497489</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.228124</td>\n",
+       "      <td>RFn</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>9</td>\n",
+       "      <td>223500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.390885</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.442583</td>\n",
+       "      <td>Unf</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2</td>\n",
+       "      <td>140000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.134029</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.566894</td>\n",
+       "      <td>RFn</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>12</td>\n",
+       "      <td>250000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   GrLivArea  BedroomAbvGr  KitchenAbvGr  OverallCond  RoofSurface  \\\n",
+       "0   0.380070         0.375      0.333333        0.500     0.316729   \n",
+       "1  -0.312090         0.375      0.333333        0.875     0.069650   \n",
+       "2   0.497489         0.375      0.333333        0.500     0.228124   \n",
+       "3   0.390885         0.375      0.333333        0.500     0.442583   \n",
+       "4   1.134029         0.500      0.333333        0.500     0.566894   \n",
+       "\n",
+       "  GarageFinish CentralAir  MoSold  SalePrice  \n",
+       "0          RFn          Y       2     208500  \n",
+       "1          RFn          Y       5     181500  \n",
+       "2          RFn          Y       9     223500  \n",
+       "3          Unf          Y       2     140000  \n",
+       "4          RFn          Y      12     250000  "
+      ]
+     },
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,40 +1599,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.8.12, pytest-7.1.3, pluggy-1.0.0 -- /Users/bita/.pyenv/versions/lewagon_current/bin/python3\n",
-      "cachedir: .pytest_cache\n",
-      "rootdir: /Users/bita/code/lewagon/data-preprocessing-workflow/tests\n",
-      "plugins: asyncio-0.19.0, anyio-3.6.2\n",
-      "asyncio: mode=strict\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 3 items\n",
-      "\n",
-      "test_scaling.py::TestScaling::test_bedroom_kitchen_condition \u001b[32mPASSED\u001b[0m\u001b[32m      [ 33%]\u001b[0m\n",
-      "test_scaling.py::TestScaling::test_gr_liv_area \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 66%]\u001b[0m\n",
-      "test_scaling.py::TestScaling::test_roof_surface \u001b[32mPASSED\u001b[0m\u001b[32m                   [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m3 passed\u001b[0m\u001b[32m in 0.73s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
-      "\n",
-      "\n",
-      "💯 You can commit your code:\n",
-      "\n",
-      "\u001b[1;32mgit\u001b[39m add tests/scaling.pickle\n",
-      "\n",
-      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed scaling step'\u001b[39m\n",
-      "\n",
-      "\u001b[32mgit\u001b[39m push origin master\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nbresult import ChallengeResult\n",
     "\n",
